src-tauri/tests/snapshots/contract_snapshots__chat_completions_request.snap
---
source: tests/contract_snapshots.rs
expression: captured
---
{
  "body": {
    "max_tokens": 256,
    "messages": [
      {
        "content": "系统提示",
        "role": "system"
      },
      {
        "content": "你好",
        "role": "user"
      }
    ],
    "model": "gpt-x",
    "stream": true,
    "temperature": 0.30000001192092896
  },
  "headers": [
    "accept: */*",
    "authorization: Bearer sk-test",
    "content-length: <len>",
    "content-type: application/json",
    "host: <host>",
    "x-org: typex"
  ],
  "method": "POST",
  "path": "/v1/chat/completions"
}
