src-tauri/tests/snapshots/contract_snapshots__openai_compat_stt_request.snap
---
source: tests/contract_snapshots.rs
expression: captured
---
{
  "body": "--<boundary>\nContent-Disposition: form-data; name=\"file\"; filename=\"audio.wav\"\nContent-Type: audio/wav\n\nRIFFwavstub!\n--<boundary>\nContent-Disposition: form-data; name=\"model\"\n\nwhisper-1\n--<boundary>\nContent-Disposition: form-data; name=\"response_format\"\n\njson\n--<boundary>\nContent-Disposition: form-data; name=\"language\"\n\nzh\n--<boundary>\nContent-Disposition: form-data; name=\"prompt\"\n\nTypex\n--<boundary>\nContent-Disposition: form-data; name=\"temperature\"\n\n0\n--<boundary>\nContent-Disposition: form-data; name=\"vad_filter\"\n\ntrue\n--<boundary>",
  "headers": [
    "accept: */*",
    "authorization: Bearer sk-test",
    "content-length: <len>",
    "content-type: multipart/form-data; boundary=<b>",
    "host: <host>",
    "x-custom: 1"
  ],
  "method": "POST",
  "path": "/v1/audio/transcriptions"
}
