src-tauri/tests/snapshots/contract_snapshots__volcengine_stt_request.snap
---
source: tests/contract_snapshots.rs
expression: captured
---
{
  "body": {
    "audio": {
      "data": "UklGRndhdnN0dWIh",
      "format": "wav"
    },
    "request": {
      "enable_itn": true,
      "enable_punc": true,
      "model_name": "bigmodel"
    },
    "user": {
      "uid": "typex"
    }
  },
  "headers": [
    "accept: */*",
    "content-length: <len>",
    "content-type: application/json",
    "host: <host>",
    "x-api-access-key: access-token-1",
    "x-api-app-key: app-key-1",
    "x-api-request-id: <uuid>",
    "x-api-resource-id: volc.bigasr.auc_turbo"
  ],
  "method": "POST",
  "path": "/"
}
